@@ -2,6 +2,13 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Aug 2014; Andre Erdmann <dywi@mailerd.de> tlp-0.5-r1.ebuild
+  Try to copy/hardlink /etc/conf.d/tlp->/etc/tlp.conf during
+  pkg_preinst() when upgrading from < 0.5-r1
+
+  04 Aug 2014; Andre Erdmann <dywi@mailerd.de> tlp-0.4.1.ebuild
+  Fix file header (copyright 2013->2014)
+
 *tlp-0.5-r1 (20 May 2014)
 
   24 Mar 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.5-r1.ebuild
